hphp/test/slow/class_type_constant/recursion_as.php.expectf
Fatal error: Cannot declare self-referencing type constant 'A::B' in %s/recursion_as.php on line 9
